--- a/src/privacy.njk
+++ b/src/privacy.njk
@@ -773,7 +773,29 @@ noindex: true
       https://sentry.io/legal.
     </p>
 
-    <h2>16. Legal basis for the processing</h2>
+    <h2>16. Data protection provisions about the application and use of CloudFlare</h2>
+
+    <p>
+      On this website, the controller has integrated components of Cloudflare. Cloudflare is a
+      service provider that offers content delivery network (CDN), internet security, and
+      performance optimization services. By using Cloudflare, this website benefits from faster
+      loading times, enhanced reliability, spam protection and improved protection against malicious
+      attacks such as Distributed Denial-of-Service (DDoS) attacks. Cloudflare acts as an
+      intermediary between the user’s browser and the website’s server, analyzing and filtering
+      traffic to ensure secure and efficient data transmission.
+    </p>
+
+    <p>
+      The operating company of Cloudflare is Cloudflare, Inc., 101 Townsend St., San Francisco,
+      California 94107, USA.
+    </p>
+
+    <p>
+      The applicable data protection provisions of Cloudflare Turnstile may be accessed under
+      https://www.cloudflare.com/de-de/turnstile-privacy-policy/.
+    </p>
+
+    <h2>17. Legal basis for the processing</h2>
     <p>
       Art. 6(1) lit. a GDPR serves as the legal basis for processing operations for which we obtain
       consent for a specific processing purpose. If the processing of personal data is necessary for
@@ -799,14 +821,14 @@ noindex: true
       controller (Recital 47 Sentence 2 GDPR).
     </p>
 
-    <h2>17. The legitimate interests pursued by the controller or by a third party</h2>
+    <h2>18. The legitimate interests pursued by the controller or by a third party</h2>
     <p>
       Where the processing of personal data is based on Article 6(1) lit. f GDPR our legitimate
       interest is to carry out our business in favor of the well-being of all our employees and the
       shareholders.
     </p>
 
-    <h2>18. Period for which the personal data will be stored</h2>
+    <h2>19. Period for which the personal data will be stored</h2>
     <p>
       The criteria used to determine the period of storage of personal data is the respective
       statutory retention period. After expiration of that period, the corresponding data is
@@ -815,7 +837,7 @@ noindex: true
     </p>
 
     <h2>
-      19. Provision of personal data as statutory or contractual requirement; Requirement necessary
+      20. Provision of personal data as statutory or contractual requirement; Requirement necessary
       to enter into a contract; Obligation of the data subject to provide the personal data;
       possible consequences of failure to provide such data
     </h2>
@@ -833,7 +855,7 @@ noindex: true
       provide the personal data and the consequences of non-provision of the personal data.
     </p>
 
-    <h2>20. Existence of automated decision-making</h2>
+    <h2>21. Existence of automated decision-making</h2>
     <p>As a responsible company, we do not use automatic decision-making or profiling.</p>
   </div>
 </div>
