add Sentry to privacy policy

--- a/src/privacy.njk
+++ b/src/privacy.njk
@@ -755,7 +755,25 @@ noindex: true
       https://twitter.com/privacy?lang=en.
     </p>
 
-    <h2>15. Legal basis for the processing</h2>
+    <h3>15. Data protection provisions about the application and use of Sentry</h3>
+    <p>
+      On this website, the controller has integrated the component of Sentry. Sentry is a web error
+      tracking service. Error tracking is the collection, gathering, and analysis of data about any
+      errors occuring for visitors to websites. An error tracking service collects, inter alia, data
+      about the user's browser and operating system, which events occored on the website, and what
+      errors occured on the website. Error tracking is mainly used for the optimization of a website
+      and in order to ensure a smooth experience for all users.
+    </p>
+    <p>
+      The operator of the Sentry component is Functional Software Inc., 45 Fremont Street 8th Floor,
+      San Francisco, CA 94105, United States.
+    </p>
+    <p>
+      For Sentry's policies and practices around analysis and storage of user data, refer to
+      https://sentry.io/legal.
+    </p>
+
+    <h2>16. Legal basis for the processing</h2>
     <p>
       Art. 6(1) lit. a GDPR serves as the legal basis for processing operations for which we obtain
       consent for a specific processing purpose. If the processing of personal data is necessary for
@@ -781,14 +799,14 @@ noindex: true
       controller (Recital 47 Sentence 2 GDPR).
     </p>
 
-    <h2>16. The legitimate interests pursued by the controller or by a third party</h2>
+    <h2>17. The legitimate interests pursued by the controller or by a third party</h2>
     <p>
       Where the processing of personal data is based on Article 6(1) lit. f GDPR our legitimate
       interest is to carry out our business in favor of the well-being of all our employees and the
       shareholders.
     </p>
 
-    <h2>17. Period for which the personal data will be stored</h2>
+    <h2>18. Period for which the personal data will be stored</h2>
     <p>
       The criteria used to determine the period of storage of personal data is the respective
       statutory retention period. After expiration of that period, the corresponding data is
@@ -797,7 +815,7 @@ noindex: true
     </p>
 
     <h2>
-      18. Provision of personal data as statutory or contractual requirement; Requirement necessary
+      19. Provision of personal data as statutory or contractual requirement; Requirement necessary
       to enter into a contract; Obligation of the data subject to provide the personal data;
       possible consequences of failure to provide such data
     </h2>
@@ -815,7 +833,7 @@ noindex: true
       provide the personal data and the consequences of non-provision of the personal data.
     </p>
 
-    <h2>19. Existence of automated decision-making</h2>
+    <h2>20. Existence of automated decision-making</h2>
     <p>As a responsible company, we do not use automatic decision-making or profiling.</p>
   </div>
 </div>
