--- a/src/assets/css/base/_utility.scss
+++ b/src/assets/css/base/_utility.scss
@@ -136,6 +136,18 @@
   }
 }
 
+.p {
+  &y-10 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+
+    @media (min-width: $breakpoint-s) {
+      padding-top: 10rem;
+      padding-bottom: 10rem;
+    }
+  }
+}
+
 body[data-js-enabled="false"] * {
   transition-duration: 0s !important;
 }
