new(component): table of contents for desktop

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -68,6 +68,7 @@
 @use "components/images-side-by-side-grid";
 @use "components/grid-event-card";
 @use "components/form-with-image";
+@use "components/table-of-contents";
 
 @use "animations/text-animation";
 
