--- a/src/components/table-of-contents.njk
+++ b/src/components/table-of-contents.njk
@@ -1,5 +1,20 @@
 {% from "btn-secondary.njk" import btnSecondary %}
+{#
+Table of contents, displayed horizontally on desktop and vertically on mobile
 
+Configuration Options:
+text: Header for a section
+source: Anchor link to the section on the same page
+
+Example usage:
+{% set content = {
+  'Our services': '#services',
+  'Our team': '#team',
+  'Our customers say': '#customer-feedback',
+  'Contact us': '#contact'
+} %}
+{{ tableOfContents(content) }}
+#}
 {%- macro tableOfContents(content) -%}
   <section class="table-of-contents">
     <div class="table-of-contents__list container container--xl py-10">
