edit(color-hero): layout for LP hero

--- a/src/assets/css/components/_color-hero.scss
+++ b/src/assets/css/components/_color-hero.scss
@@ -107,6 +107,14 @@
     padding: 25vh 0 10vh;
   }
 
+  .color-hero__container.container-- {
+    &xl {
+      width:90%;
+      padding: 12rem 0 6rem;
+    }
+    
+  }
+
   .color-hero {
     min-height: 90vh;
   }
