--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -23,7 +23,8 @@ og:
   set 'content' = {
   "title": "Team Up With Us for Rust!",
   "text": "Mainmatter is here to empower your team to fully realize Rust’s benefits in your projects. Mainmatter is here to empower your team to fully realize Rust’s benefits in your projects. Mainmatter is here to empower your team to fully realize Rust’s benefits in your projects. Mainmatter is here to empower your team to fully realize Rust’s benefits in your projects.",
-  "loading": "eager"
+  "loading": "eager",
+  "containerWidth": "xl"
   }
 %}
 {{ colorHero('purple', content) }}
