--- a/src/components/color-hero.njk
+++ b/src/components/color-hero.njk
@@ -11,7 +11,8 @@ content: A content block with the following options:
   text: String or markup for body text
   linkUrl: Optional link destination
   linkText: Optional link text
-  contentWidth: Width of the container; normally set to container--lg on all hero sections. To set it to something else, use "xl", "s", etc. If the container width is specified, it will also be set as the width of the color-hero__text section. 
+  contentType: Width of the container; normally set to container--lg on all hero sections. 
+  Landing page hero sections (LPs) are set up via setting ContentType to "lp".
 
 Example usage:
 {% set content = {
@@ -30,7 +31,7 @@ Example usage:
 {% from "cta-link.njk" import ctaLink %}
 {%- macro colorHero(color, content) -%}
   <section
-    class="color-hero color-hero--{{ color }} {% if content.class %}{{ content.class }}{% endif %}{% if content.logo %}{{ content.logo }}{% elseif content.background %}{{ content.background }}{% endif %}"
+    class="color-hero color-hero--{{ color }} {% if content.class %}{{ content.class }}{% endif %}{% if content.logo %}{{ content.logo }}{% elseif content.background %}{{ content.background }}{% endif %}{% if content.containerType == "lp" %}color-hero__LP{% endif %}"
     data-background-color="{{ color }}"
   >
     {% if content.image %}
@@ -39,7 +40,7 @@ Example usage:
       </div>
       <div class="color-hero__overlay"></div>
     {% endif %}
-    <div class="color-hero__container container {% if content.containerWidth %}container--{{ content.containerWidth }}{% else %}container--lg{% endif %}">
+    <div class=" container {% if content.containerType == "lp" %}color-hero__container__LP container__LP{% else %}color-hero__container container--lg{% endif %}">
       <div class="color-hero__main">
         {% if content.eyebrow %}
           <p class="color-hero__eyebrow h5">{{ content.eyebrow | safe }}</p>
@@ -51,7 +52,7 @@ Example usage:
           <p class="color-hero__subheading caption">{{ content.subheading | safe }}</p>
         {% endif %}
         {% if content.text %}
-          <div class="{% if content.containerWidth %}container--{{ content.containerWidth }}{% else %}color-hero__text{% endif %} mt-2">{{ content.text | safe }}</div>
+          <div class="{% if content.containerType == "lp" %}container--xl{% else %}color-hero__text{% endif %} mt-2">{{ content.text | safe }}</div>
         {% endif %}
         {% if content.linkUrl %}
           {{ ctaLink(content.linkUrl, content.linkText, 'color-hero__link') }}
