--- a/src/assets/css/base/_utility.scss
+++ b/src/assets/css/base/_utility.scss
@@ -29,6 +29,9 @@
 }
 
 .m {
+  &-0 {
+    margin: 0;
+  }
   &t-0 {
     margin-top: 0;
   }
@@ -137,6 +140,12 @@
 }
 
 .p {
+  &-3 {
+    padding: 3rem;
+  }
+  &-5 {
+    padding: 5rem;
+  }
   &t-3 {
     padding-top: 3rem;
   }
