add(secondary feature): square images

--- a/src/assets/css/components/_secondary-feature.scss
+++ b/src/assets/css/components/_secondary-feature.scss
@@ -15,6 +15,10 @@
   line-height: 0;
 }
 
+.secondary-feature__image-square.split-content__author img{
+  clip-path: none;
+}
+
 .ember-consultants {
   display: flex;
   flex-direction: row;
