--- a/src/components/content/secondary-feature-rust-consulting.njk
+++ b/src/components/content/secondary-feature-rust-consulting.njk
@@ -6,4 +6,4 @@
   "loading": "lazy"
   }
 %}
-{{ secondaryFeature(content, 'split-content__author') }}
+{{ secondaryFeature(content, 'split-content__author secondary-feature__image-square') }}
