--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -59,6 +59,7 @@
 @use "components/scroll-slides";
 @use "components/quotes-list";
 @use "components/tech-cards";
+@use "components/service-cards";
 @use "components/case-cards";
 @use "components/strategy-list";
 @use "components/cta-banner";
