fix(color-hero): wording

--- a/src/components/color-hero.njk
+++ b/src/components/color-hero.njk
@@ -12,7 +12,7 @@ content: A content block with the following options:
   linkUrl: Optional link destination
   linkText: Optional link text
   contentType: Width of the container; normally set to container--lg on all hero sections. 
-  Landing page hero sections (LPs) are set up via setting ContentType to "lp".
+  Landing page hero sections are indicated via setting ContentType to "lp".
 
 Example usage:
 {% set content = {
