add(global-css): color-white class

--- a/src/assets/css/base/_global.scss
+++ b/src/assets/css/base/_global.scss
@@ -204,6 +204,12 @@ button {
   }
 }
 
+.color- {
+  &white {
+    color: var(--color-white) !important;
+  }
+}
+
 .background- {
   &aqua {
     background-color: var(--color-aqua);
