add(rust-consulting): contact form

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -87,7 +87,7 @@ og:
   </div>
 </section>
 
-<section class="my-10" id="successes">
+<section class="mt-10 mb-5" id="successes">
   <div class="container container--xl mb-6">
     <h1>Our customers say about us</h1>
     {%
@@ -137,6 +137,8 @@ og:
   %}
   {{ logoList(logoCompanies) }}
 </section>
+
+{% include 'contact-form-LP.njk' %}
 
 <section class="my-10">
   <div class="container container--lg">
