edit(rust-consulting): delete unnecessary sections, reorder

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -87,6 +87,19 @@ og:
   </div>
 </section>
 
+<section class="mb-10">
+  {%
+    set imageData = {
+    "imgPath": "/assets/images/rust/eurorust-2024.jpg",
+    "alt": "Photo of EuroRust 2024's speakers, organizers, moderators and the audience in the background, all with theirs hands in the air",
+    "sizes": "100vw",
+    "loading": "lazy",
+    "sizesArray": [760, 1440, 1920]
+    }
+  %}
+  {{ imageAspectRatio(imageData, "32/13", "35/19") }}
+</section>
+
 <section class="mt-10 mb-5" id="successes">
   <div class="container container--xl mb-6">
     <h1>Our customers say about us</h1>
@@ -140,213 +153,7 @@ og:
 
 {% include 'contact-form-LP.njk' %}
 
-<section class="my-10">
-  <div class="container container--lg">
-    <div class="mb-10">
-      <h3 class="mb-2">Custom Development</h3>
-      <p class="body">
-        We develop complete web and cloud apps with Rust so your team can focus on other
-        initiatives. We have experience with all relevant crates like actix, axum, tokio, hyper, and
-        more – and in fact teach others how to use those. Our team delivers high quality codebases
-        as well as the tooling and infrastructure needed for sustainable maintenance.
-      </p>
-      {%
-        set link = {
-        "label": 'Work with us!',
-        "url": '/contact/?service=rust'
-        }
-      %}
-      {{ btnSecondary( link, 'mt-2 plausible-event-name=Rust+Contact' ) }}
-    </div>
-    <div class="mb-10">
-      <h3 class="mb-2">Training and Support</h3>
-      <p class="body">
-        There is excellent material out there for learning Rust on your own. But you might not have
-        the luxury of time, or the in-house expertise, to upskill your entire team or overcome
-        obstacles on your own. Our trainers are world-class experts and can design a learning path
-        that best fits your needs.
-      </p>
-      {%
-        set link = {
-        "label": 'Check out our workshops!',
-        "url": '/services/workshops/rust/'
-        }
-      %}
-      {{ btnSecondary( link, 'mt-2 plausible-event-name=Rust+Workshops' ) }}
-    </div>
-    <div class="mb-10">
-      <h3 class="mb-2">Team reinforcement</h3>
-      <p class="body">
-        Rust is a young technology – hiring Senior talent can be a challenge. Our experts can merge
-        with your in-house product teams to ensure the timely delivery of mission-critical projects.
-        We’re more than hired hands – we mentor your team throughout the process to help lift
-        productivity long after our collaboration ends.
-      </p>
-      {%
-        set link = {
-        "label": 'Work with us!',
-        "url": '/contact/?service=rust'
-        }
-      %}
-      {{ btnSecondary( link, 'mt-2 plausible-event-name=Rust+Contact' ) }}
-    </div>
-  </div>
-</section>
-
-<section class="my-10 container container--lg">
-  <div class="">
-    <div class="mb-4">
-      <h5 class="mb-015">Rust & Mainmatter</h5>
-      <h3 class="mb-2">A unique skillset</h3>
-      <p>
-        We’re Rust experts — our team is led by Luca Palmieri, author of
-        <a href="http://zero2prod.com">"Zero to Production in Rust"</a>. We’ve been active in the
-        Rust ecosystem for years, creating the
-        <a href="https://rust-exercises.com">100 Exercises to Learn Rust</a> course, contributing to
-        <a href="https://crates.io">crates.io</a>, and maintaining several other
-        <a href="#open-source">open-source projects</a>.
-      </p>
-      <p>
-        We support you in rewriting existing codebases to Rust, using Rust to accelerate hot modules
-        in Python, Ruby, Node.js, or other languages, and in building new systems with Rust from
-        scratch.
-      </p>
-    </div>
-  </div>
-</section>
-
-
-
-<section class="mb-10">
-  {%
-    set imageData = {
-    "imgPath": "/assets/images/rust/eurorust-2024.jpg",
-    "alt": "Photo of EuroRust 2024's speakers, organizers, moderators and the audience in the background, all with theirs hands in the air",
-    "sizes": "100vw",
-    "loading": "lazy",
-    "sizesArray": [760, 1440, 1920]
-    }
-  %}
-  {{ imageAspectRatio(imageData, "32/13", "35/19") }}
-</section>
-
-<section class="my-10 container container--lg">
-  <div class="">
-    <div class="mb-4">
-      <h5 class="mb-015">EuroRust</h5>
-      <h3 class="mb-2">We run EuroRust</h3>
-      <p>
-        In 2026, EuroRust comes to Barcelona from October 14th to 17th. We’ll have two days of talks
-        with a main track and a side track as well as an impl room. Plus, there will be workshops on
-        the day before the main conference, an impl day on the day after, several side activities
-        around the event, as well as our hallmark after party on Friday night.
-      </p>
-    </div>
-  </div>
-  <div class="split-content">
-    <a href="https://eurorust.eu" class="split-content__link"></a>
-    <div class="split-content__wrapper">
-      <div class="split-content__content">
-        <h4>Join us in Barcelona in 2026 for 4 days of celebrating the European Rust community</h4>
-        {%
-          set link = {
-          "label": 'Stay up to date!',
-          "url": 'https://eurorust.eu'
-          }
-        %}
-        {{ btnSecondary( link, 'mt-2' ) }}
-      </div>
-      <div class="split-content__feature">
-        {% include 'content/secondary-feature-eurorust.njk' %}
-      </div>
-    </div>
-  </div>
-</section>
-
-{%
-  set logoCompanies = [
-  'Rust Foundation',
-  'arm',
-  'Huawei',
-  'Ferrocene',
-  'Sentry',
-  'Jetbrains',
-  'Aleph Alpha',
-  'Google',
-  'Realm',
-  'Astral',
-  'Helsing',
-  'CrabNebula',
-  'Oreilly'
-  ]
-%}
-{% set title = 'Our EuroRust partners are betting on Rust' %}
-{{ logoList(logoCompanies, title, "h4", "h5") }}
-{% include "global/rust-subscription-cta.njk" %}
-
-<section class="my-10 container container--lg">
-  <div class="split-content">
-    <a href="https://foundation.rust-lang.org/" class="split-content__link"></a>
-    <div class="split-content__wrapper">
-      <div class="split-content__content">
-        <h4>Mainmatter is a Silver Member of the Rust Foundation</h4>
-        {%
-          set link = {
-          "label": 'Learn more',
-          "url": 'https://foundation.rust-lang.org/'
-          }
-        %}
-        {{ btnSecondary( link, 'mt-2' ) }}
-      </div>
-      <div class="split-content__feature">{% include 'content/secondary-feature-rust.njk' %}</div>
-    </div>
-  </div>
-</section>
-
-<section class="mb-10">
-  {%
-    set imageData = {
-    "imgPath": "/assets/images/rust/eurorust-crab.jpg",
-    "alt": "People standing together in groups at EuroRust in conversations, a big, ca. 3min tall, inflatable Ferris in the background",
-    "sizes": "100vw",
-    "loading": "lazy",
-    "sizesArray": [760, 1440, 1920]
-    }
-  %}
-  {{ imageAspectRatio(imageData, "32/13", "35/19") }}
-</section>
-
-{% set clients = ['aleph-alpha', 'kisters', 'bmw-car-it', 'redis'] %}
-{{ featuredCaseStudies(clients, 'Browse our work') }}
-
-<section class="my-10 container container--lg">
-  <div class="split-content">
-    <a
-      href="https://www.youtube.com/playlist?list=PLdAi-nB9AYut1ftpNKFeqmrW-4VrCujsq"
-      class="split-content__link"
-    ></a>
-    <div class="split-content__wrapper">
-      <div class="split-content__content">
-        <h4>
-          Check out our Rust videos on YouTube – interviews with Rust leaders, recordings of events,
-          and more.
-        </h4>
-        {%
-          set link = {
-          "label": 'Watch videos',
-          "url": 'https://www.youtube.com/playlist?list=PLdAi-nB9AYut1ftpNKFeqmrW-4VrCujsq'
-          }
-        %}
-        {{ btnSecondary( link, 'mt-2' ) }}
-      </div>
-      <div class="split-content__feature">
-        {% include 'content/secondary-feature-youtube.njk' %}
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="container container--xl opensource-list" id="open-source">
+<section class="container container--xl opensource-list my-10" id="open-source">
   <div class="">
     <h2 class="opensource-list__title h2">We love Open Source</h2>
     <ul class="opensource-list__list">
@@ -401,15 +208,3 @@ og:
     </ul>
   </div>
 </section>
-
-{{ recentPosts("Latest from our blog on the topic", collections.rustPosts) }}
-{% include "global/rust-newsletter-cta.njk" %}
-{%
-  set 'content' = {
-  "title": "Team up with us for Rust!",
-  "text": "Our Rust experts are ready to guide you through your next big move. Let us know how we can help.",
-  "linkUrl": "/contact/?service=rust",
-  "linkText": "Get in touch"
-  }
-%}
-{{ ctaBanner('purple', 'full', content) }}
