add(utility.css): mobile-hidden class

--- a/src/assets/css/base/_utility.scss
+++ b/src/assets/css/base/_utility.scss
@@ -28,6 +28,13 @@
   display: none;
 }
 
+.mobile-hidden {
+  @media (max-width: $breakpoint-s) {
+    display: none;
+  }
+
+}
+
 .m {
   &-0 {
     margin: 0;
