add(component): wide image with button on top

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -46,6 +46,7 @@
 @use "components/image-banner-with-text";
 @use "components/text-with-list";
 @use "components/image-aspect-ratio";
+@use "components/image-aspect-ratio-with-button";
 @use "components/work";
 @use "components/recent-posts";
 @use "components/split-content";
