--- a/src/assets/css/components/_logo-list.scss
+++ b/src/assets/css/components/_logo-list.scss
@@ -51,12 +51,13 @@
 }
 
 .logo-list__image {
-  display: block;
   text-align: center;
 
   img,
   svg {
     max-height: 5rem;
+    margin: 0 auto;
+    display: block;
   }
 }
 
